<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">MobileDev</string>

    <!-- Add fragment -->
    <string name="addTextViewName">Name</string>
    <string name="addTextViewAge">Age</string>
    <string name="addCheckBox">Checked</string>
    <string name="addButtonBack">Back</string>
    <string name="addButtonAdd">Add</string>

    <!-- Main activity -->
    <string name="mainButtonAdd">Add</string>
    <string name="mainButtonDelete">Delete</string>
    <string name="mainButtonSearch">Search</string>
    <string name="mainButtonEdit">Edit</string>

    <!-- Delete fragment -->
    <string name="deleteButtonDeleteAll">All</string>
    <string name="deleteButtonDeleteChecked">Checked</string>
    <string name="deleteButtonDeleteUnchecked">Unchecked</string>

    <!-- Edit fragment -->
    <string name="editButtonEdit">Edit element</string>

    <!-- Search fragment -->
    <string name="searchButtonSearch">Search</string>
    <string name="buttonLoadJSON">JSON</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>