<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DeleteFragment">

    <Button
        android:id="@+id/deleteButtonDeleteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/deleteButtonDeleteAll" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteButtonDeleteChecked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/deleteButtonDeleteChecked" />

        <Button
            android:id="@+id/deleteButtonDeleteUnchecked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/deleteButtonDeleteUnchecked" />

    </LinearLayout>

    <ListView
        android:id="@+id/deleteListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>