<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.EditFragment">

    <TextView
        android:id="@+id/editTextViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTextViewName" />

    <EditText
        android:id="@+id/editEditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTextViewAge" />

    <EditText
        android:id="@+id/editEditTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/editCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addCheckBox" />

    <Button
        android:id="@+id/editButtonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit element" />

    <ListView
        android:id="@+id/editListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

</LinearLayout>